...
                  flexibleSpace: FlexibleSpaceBar(
                    title: ConstrainedBox(
                      constraints: BoxConstraints(maxWidth: availableWidth),
                      child: Text(
                        isInternal
                            ? "Importer depuis le web"
                            : "Importer votre calendrier",
                        style: TextStyle(color: Colors.white),
                      ),
                    ),
                  ),
                  expandedHeight: 200.0,
                ),
...
